// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PromoCodeFormIndex stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="max-w-md mx-auto p-6"
  >
    <div
      class="w-full"
    >
      <div
        class="mb-3"
        data-orientation="vertical"
        data-slot="accordion"
      >
        <div
          class="border-b last:border-b-0"
          data-orientation="vertical"
          data-slot="accordion-item"
          data-state="closed"
        >
          <h3
            class="flex"
            data-orientation="vertical"
            data-state="closed"
          >
            <button
              aria-controls="radix-«r1»"
              aria-expanded="false"
              class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left text-sm font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 py-2"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-slot="accordion-trigger"
              data-state="closed"
              id="radix-«r0»"
              type="button"
            >
              <span
                class="flex-1 text-left text-sm font-medium"
              >
                Enter a Promotion Code
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«r0»"
            class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
            data-orientation="vertical"
            data-slot="accordion-content"
            data-state="closed"
            hidden=""
            id="radix-«r1»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoCodeFormIndex stories snapshot > DesktopView story renders and matches snapshot 1`] = `
<div>
  <div
    class="max-w-md mx-auto p-6"
  >
    <div
      class="w-full"
    >
      <div
        class="mb-3"
        data-orientation="vertical"
        data-slot="accordion"
      >
        <div
          class="border-b last:border-b-0"
          data-orientation="vertical"
          data-slot="accordion-item"
          data-state="closed"
        >
          <h3
            class="flex"
            data-orientation="vertical"
            data-state="closed"
          >
            <button
              aria-controls="radix-«rb»"
              aria-expanded="false"
              class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left text-sm font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 py-2"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-slot="accordion-trigger"
              data-state="closed"
              id="radix-«ra»"
              type="button"
            >
              <span
                class="flex-1 text-left text-sm font-medium"
              >
                Enter a Promotion Code
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«ra»"
            class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
            data-orientation="vertical"
            data-slot="accordion-content"
            data-state="closed"
            hidden=""
            id="radix-«rb»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoCodeFormIndex stories snapshot > MobileView story renders and matches snapshot 1`] = `
<div>
  <div
    class="max-w-md mx-auto p-6"
  >
    <div
      class="w-full"
    >
      <div
        class="mb-3"
        data-orientation="vertical"
        data-slot="accordion"
      >
        <div
          class="border-b last:border-b-0"
          data-orientation="vertical"
          data-slot="accordion-item"
          data-state="closed"
        >
          <h3
            class="flex"
            data-orientation="vertical"
            data-state="closed"
          >
            <button
              aria-controls="radix-«r7»"
              aria-expanded="false"
              class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left text-sm font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 py-2"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-slot="accordion-trigger"
              data-state="closed"
              id="radix-«r6»"
              type="button"
            >
              <span
                class="flex-1 text-left text-sm font-medium"
              >
                Enter a Promotion Code
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«r6»"
            class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
            data-orientation="vertical"
            data-slot="accordion-content"
            data-state="closed"
            hidden=""
            id="radix-«r7»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoCodeFormIndex stories snapshot > TabletView story renders and matches snapshot 1`] = `
<div>
  <div
    class="max-w-md mx-auto p-6"
  >
    <div
      class="w-full"
    >
      <div
        class="mb-3"
        data-orientation="vertical"
        data-slot="accordion"
      >
        <div
          class="border-b last:border-b-0"
          data-orientation="vertical"
          data-slot="accordion-item"
          data-state="closed"
        >
          <h3
            class="flex"
            data-orientation="vertical"
            data-state="closed"
          >
            <button
              aria-controls="radix-«r9»"
              aria-expanded="false"
              class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left text-sm font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 py-2"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-slot="accordion-trigger"
              data-state="closed"
              id="radix-«r8»"
              type="button"
            >
              <span
                class="flex-1 text-left text-sm font-medium"
              >
                Enter a Promotion Code
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«r8»"
            class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
            data-orientation="vertical"
            data-slot="accordion-content"
            data-state="closed"
            hidden=""
            id="radix-«r9»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoCodeFormIndex stories snapshot > WithCustomBasketId story renders and matches snapshot 1`] = `
<div>
  <div
    class="max-w-md mx-auto p-6"
  >
    <div
      class="w-full"
    >
      <div
        class="mb-3"
        data-orientation="vertical"
        data-slot="accordion"
      >
        <div
          class="border-b last:border-b-0"
          data-orientation="vertical"
          data-slot="accordion-item"
          data-state="closed"
        >
          <h3
            class="flex"
            data-orientation="vertical"
            data-state="closed"
          >
            <button
              aria-controls="radix-«r5»"
              aria-expanded="false"
              class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left text-sm font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 py-2"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-slot="accordion-trigger"
              data-state="closed"
              id="radix-«r4»"
              type="button"
            >
              <span
                class="flex-1 text-left text-sm font-medium"
              >
                Enter a Promotion Code
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«r4»"
            class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
            data-orientation="vertical"
            data-slot="accordion-content"
            data-state="closed"
            hidden=""
            id="radix-«r5»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoCodeFormIndex stories snapshot > WithoutBasketId story renders and matches snapshot 1`] = `
<div>
  <div
    class="max-w-md mx-auto p-6"
  >
    <div
      class="w-full"
    >
      <div
        class="mb-3"
        data-orientation="vertical"
        data-slot="accordion"
      >
        <div
          class="border-b last:border-b-0"
          data-orientation="vertical"
          data-slot="accordion-item"
          data-state="closed"
        >
          <h3
            class="flex"
            data-orientation="vertical"
            data-state="closed"
          >
            <button
              aria-controls="radix-«r3»"
              aria-expanded="false"
              class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left text-sm font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 py-2"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-slot="accordion-trigger"
              data-state="closed"
              id="radix-«r2»"
              type="button"
            >
              <span
                class="flex-1 text-left text-sm font-medium"
              >
                Enter a Promotion Code
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«r2»"
            class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
            data-orientation="vertical"
            data-slot="accordion-content"
            data-state="closed"
            hidden=""
            id="radix-«r3»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
